--- a/index.css
+++ b/index.css
@@ -88,6 +88,7 @@ html, body {
   width: 100%;
   height: 100%;
   height: 100dvh;
+  margin: 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
